--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -25,8 +25,23 @@ jobs:
       - name: Typecheck
         run: npm run typecheck
 
+      # IMPORTANT:
+      # - Wrangler reads these env vars at deploy time and publishes them as Worker bindings.
+      # - Keep secrets in GitHub Secrets; non-secrets in GitHub Variables.
       - name: Deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+          # Worker secrets (GitHub Secrets)
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          COMPOSIO_API_KEY: ${{ secrets.COMPOSIO_API_KEY }}
+
+          # Worker vars (GitHub Variables)
+          SUPABASE_SCHEMA: ${{ vars.SUPABASE_SCHEMA }}
+          PAUSE_REMINDER_DAYS: ${{ vars.PAUSE_REMINDER_DAYS }}
+          BOT_ALLOWED_TELEGRAM_USER_IDS: ${{ vars.BOT_ALLOWED_TELEGRAM_USER_IDS }}
+          LINEAR_TEAM_ID: ${{ vars.LINEAR_TEAM_ID }}
         run: npm run deploy
