--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
+    "build": "wrangler build",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250214.0",
     "typescript": "^5.7.3",
-    "wrangler": "^3.111.0"
+    "wrangler": "^4.3.0"
   }
 }
