--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.49.1"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20260211.0",
     "typescript": "^5.7.3",
     "wrangler": "^4.3.0"
   }
